# Rednote-agent-pro

./: .env.example  .gitignore  ACCEPTANCE_CHECKLIST.md  CONTENT_PIPELINE_DESIGN.md  DEMO.md  FEISHU_CLI_INTEGRATION.md  MODEL_PROVIDER_INTEGRATION.md  OPERATOR_RUNBOOK.md  PRODUCT_WORKBENCH_GUIDE.md  PROMPT_TEMPLATE_STRATEGY.md  PROVIDER_INTEGRATION_MATRIX.md  README.md  REAL_OPS_READINESS.md  SCRAPLING_INTEGRATION.md  SECURITY_GUARDRAILS.md  SHOWCASE.md  SMALL_SCALE_VALIDATION_REPORT.md  assumptions.md  backlog.md  progress.md  pyproject.toml  risks.md
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-04.jsonl  turns-2026-04-04.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
app/: __init__.py  main.py  schemas.py
app/application/: dispatcher.py  external_worker.py  factory.py  services.py  worker_runner.py
app/core/: config.py  middleware.py
app/db/: models.py  session.py
app/domain/: contracts.py  model_schemas.py  models.py
app/infrastructure/: cli_runner.py
config/: feishu_field_mapping.json
data/: app.db
docs/portfolio/: DEMO.md  SHOWCASE.md
fixtures/: real_like_samples.json
fixtures/scrapling/: detail_result.html  search_result.html
scripts/: evaluate_sample_outputs.py
templates/: diagnostics.html  entities.html  entity_detail.html  index.html  login.html  providers.html  run_list.html
tests/: conftest.py
tests/integration/: test_auth_and_observability.py  test_collector_and_sync_runs.py  test_diagnostics_and_health.py  test_entity_rest_api.py  test_external_worker_control_api.py  test_mcp_and_web.py  test_pipeline_rest_flow.py  test_provider_diagnostics.py  test_provider_health.py  test_publish_safety.py  test_rest_pipeline_flow.py  test_review_regeneration.py  test_role_permissions.py  test_sample_eval_harness.py  test_web_auth.py  test_web_entity_views.py  test_web_ops_pages.py
(+128 files in other folders)
