[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaohongshu-content-platform"
version = "0.2.0"
description = "Provider-oriented Xiaohongshu content mining and generation platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]
collectors = [
  "scrapling[fetchers]>=0.4.2",
]

[tool.setuptools.packages.find]
include = ["app*"]
